// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.square";
option java_outer_classname = "SquareProto";
option objc_class_prefix = "SQP";

package com.example.grpc;

message SquareRequest {
  float inval = 1;
}

message SquareReply {
  float outval = 1;
}

service SquareService {
  rpc RetSquare (SquareRequest) returns (SquareReply) {}
}